samples/_failures_safe/1761318315_d22cb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffe7223c.c: In function ‘read_delimiter’:
./samples/SAFE/__tmp_ffe7223c.c:138:5: error: expected declaration or statement at end of input
  138 |     token->line = state->line;
      |     ^~~~~
